--- a/index.html
+++ b/index.html
@@ -2,10 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Axit</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
+ <div class="block1">
+    <div class="awesom">
+        <p>WHY THIS IS AWESOME</p>
+    </div>
+     <div class="line">
+         <hr noshade color="ff8b38">
+     </div>
+     <div class="lorem">
+         <p>Lorem ipsum dolor sit amet,consecteture adipiscing elit.</p>
+     </div>
+ </div>
+ <div class="block2">
+     <div class="colum12">
+         <div class="sqar">
+             <img src="./assets/image/cirle2.png" alt="SQAR">
+         </div>
+         <div class="text">
+             <p>Thoughtful Design</p>
+         </div>
+         <div class="text2">
+             <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra</p>
+         </div>
 
+     </div>
+     <div class="colum12">
+         <div class="sqar">
+             <img src="./assets/image/cirle1.png" alt="SQAR">
+         </div>
+         <div class="text">
+            <p>Well Crafted</p>
+         </div>
+         <div class="text2">
+             <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra</p>
+         </div>
+
+     </div>
+     <div class="colum2">
+         <div class="sqar">
+             <img src="./assets/image/circle3.png" alt="SQAR">
+         </div>
+         <div class="text">
+            <p>Easy to Customize</p>
+         </div>
+         <div class="text2">
+             <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra</p>
+         </div>
+
+     </div>
+ </div>
 </body>
 </html>
