--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             </div>
         </div>
     </div>
+
+    <div class="pricing_back">
+        <div class="pricing container">
+            <h2>PRICING OPTIONS</h2>
+            <p class="benefit__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+    </div>
     <div class="download">
         <div class="download__image">
         <div class="download__color">
