--- a/index.html
+++ b/index.html
@@ -38,6 +38,44 @@
         <div class="pricing container">
             <h2>PRICING OPTIONS</h2>
             <p class="benefit__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="pricing_row">
+                <div class="pricing__table">
+                    <div class="description"><p class="description_p">Basic</p></div>
+                    <div class="sentence"><p class="sentence__p"></p></div>
+                    <div class="day_price"><p class="day_price__p">Free for Life</p></div>
+                    <div class="orange__line13"></div>
+                    <div class="other_block"><p class="other_block__p">1 gb of space</p></div>
+                    <div class="other_block"><p class="other_block__p">10 gb of bandwidth</p></div>
+                    <div class="other_block"><p class="other_block__p">13 websites</p></div>
+                    <div class="other_block"><p class="other_block__p">Basic Customization</p></div>
+                    <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>
+                    <div class="other_block"><p class="other_block__p">Email support</p></div>
+                </div>
+                <div class="pricing__table">
+                    <div class="description"><p class="description_p">Professional</p></div>
+                    <div class="sentence"></div>
+                    <div class="day_price"><p class="day_price__p">Monthly Payment</p></div>
+                    <div class="orange__line2"><p class="orange__line2__p">Our most popular</p></div>
+                    <div class="other_block"><p class="other_block__p">5 gb of space</p></div>
+                    <div class="other_block"><p class="other_block__p">50 gb of bandwidth</p></div>
+                    <div class="other_block"><p class="other_block__p">12 websites</p></div>
+                    <div class="other_block"><p class="other_block__p">Advanced Customization</p></div>
+                    <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>
+                    <div class="other_block"><p class="other_block__p">Email support</p></div>
+                </div>
+                <div class="pricing__table">
+                    <div class="description"><p class="description_p">Enterprise</p></div>
+                    <div class="sentence"></div>
+                    <div class="day_price"><p class="day_price__p">Monthly Payment</p></div>
+                    <div class="orange__line13"></div>
+                    <div class="other_block"><p class="other_block__p">Unlimited space</p></div>
+                    <div class="other_block"><p class="other_block__p">Unlimited bandwidth</p></div>
+                    <div class="other_block"><p class="other_block__p">100 websites</p></div>
+                    <div class="other_block"><p class="other_block__p">Advanced Customization</p></div>
+                    <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>
+                    <div class="other_block"><p class="other_block__p">24/7 customer support</p></div>
+                </div>
+            </div>
         </div>
 
     </div>
