--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
     <symbol id="stumbleupon" viewBox="0 0 512 512"><path fill="currentColor" d="M502.9 266v69.7c0 62.1-50.3 112.4-112.4 112.4-61.8 0-112.4-49.8-112.4-111.3v-70.2l34.3 16 51.1-15.2V338c0 14.7 12 26.5 26.7 26.5S417 352.7 417 338v-72h85.9zm-224.7-58.2l34.3 16 51.1-15.2V173c0-60.5-51.1-109-112.1-109-60.8 0-112.1 48.2-112.1 108.2v162.4c0 14.9-12 26.7-26.7 26.7S86 349.5 86 334.6V266H0v69.7C0 397.7 50.3 448 112.4 448c61.6 0 112.4-49.5 112.4-110.8V176.9c0-14.7 12-26.7 26.7-26.7s26.7 12 26.7 26.7v30.9z" ></path></symbol>
     <symbol id="rss" viewBox="0 0 448 512"><path fill="currentColor" d="M128.081 415.959c0 35.369-28.672 64.041-64.041 64.041S0 451.328 0 415.959s28.672-64.041 64.041-64.041 64.04 28.673 64.04 64.041zm175.66 47.25c-8.354-154.6-132.185-278.587-286.95-286.95C7.656 175.765 0 183.105 0 192.253v48.069c0 8.415 6.49 15.472 14.887 16.018 111.832 7.284 201.473 96.702 208.772 208.772.547 8.397 7.604 14.887 16.018 14.887h48.069c9.149.001 16.489-7.655 15.995-16.79zm144.249.288C439.596 229.677 251.465 40.445 16.503 32.01 7.473 31.686 0 38.981 0 48.016v48.068c0 8.625 6.835 15.645 15.453 15.999 191.179 7.839 344.627 161.316 352.465 352.465.353 8.618 7.373 15.453 15.999 15.453h48.068c9.034-.001 16.329-7.474 16.005-16.504z"></path></symbol>
 </svg>
-<div class="social_media ">
-    <div class="social_media_content container">
-        <div class="social_media_h4_p">
-            <h4 class="social_media__h4">Social media</h4>
-            <p class="social_media__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <p class="social_media__p">Aenean euismod bibendum laoreet</p>
-        </div>
-        <svg  class="icon facebook social_media_icon">
-            <use href="#facebook"></use>
-        </svg>
-        <svg  class="icon social_media_icon">
-            <use href="#twitter"></use>
-        </svg>
-        <svg  class="icon social_media_icon">
-            <use href="#google"></use>
-        </svg>
-        <svg  class="icon social_media_icon">
-            <use href="#pinterest"></use>
-        </svg>
-        <svg  class="icon social_media_icon">
-            <use href="#instagram"></use>
-        </svg>
-        <svg  class="icon social_media_icon">
-            <use href="#stumbleupon"></use>
-        </svg>
-        <svg  class="icon social_media_icon">
-            <use href="#rss"></use>
-        </svg>
-    </div>
-</div>
+<!--<div class="social_media ">-->
+<!--    <div class="social_media_content container">-->
+<!--        <div class="social_media_h4_p">-->
+<!--            <h4 class="social_media__h4">Social media</h4>-->
+<!--            <p class="social_media__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+<!--            <p class="social_media__p">Aenean euismod bibendum laoreet</p>-->
+<!--        </div>-->
+<!--        <svg  class="icon facebook social_media_icon">-->
+<!--            <use href="#facebook"></use>-->
+<!--        </svg>-->
+<!--        <svg  class="icon social_media_icon">-->
+<!--            <use href="#twitter"></use>-->
+<!--        </svg>-->
+<!--        <svg  class="icon social_media_icon">-->
+<!--            <use href="#google"></use>-->
+<!--        </svg>-->
+<!--        <svg  class="icon social_media_icon">-->
+<!--            <use href="#pinterest"></use>-->
+<!--        </svg>-->
+<!--        <svg  class="icon social_media_icon">-->
+<!--            <use href="#instagram"></use>-->
+<!--        </svg>-->
+<!--        <svg  class="icon social_media_icon">-->
+<!--            <use href="#stumbleupon"></use>-->
+<!--        </svg>-->
+<!--        <svg  class="icon social_media_icon">-->
+<!--            <use href="#rss"></use>-->
+<!--        </svg>-->
+<!--    </div>-->
+<!--</div>-->
 <!------------------------------------benefit block --------------------------------------------->
-<div class="benefit container">
+<div class="benefit container _text-center">
     <h2>Why this is awesome</h2>
-    <p class="benefit__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p class="_indent">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     <div class="row">
         <div class="cell">
             <div class="benefit__image_wrap">
@@ -74,105 +74,118 @@
     </div>
 </div>
 <!-----------------------------------block pricing----------------------------------------------->
-<div class="pricing_back">
-    <div class="pricing container">
-        <h2>PRICING OPTIONS</h2>
-        <p class="benefit__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="pricing_row">
-            <div class="pricing__table">
-                <div class="description"><p class="description_p">Basic</p></div>
-                <div class="sentence"><p class="sentence__p">$0</p></div>
-                <div class="day_price"><p class="day_price__p">Free for Life</p></div>
-                <div class="orange__line13"></div>
-                <div class="other_block"><p class="other_block__p">1 gb of space</p></div>
-                <div class="other_block"><p class="other_block__p">10 gb of bandwidth</p></div>
-                <div class="other_block"><p class="other_block__p">13 websites</p></div>
-                <div class="other_block"><p class="other_block__p">Basic Customization</p></div>
-                <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>
-                <div class="other_block"><p class="other_block__p">Email support</p></div>
-            </div>
-            <div class="pricing__table">
-                <div class="description"><p class="description_p">Professional</p></div>
-                <div class="sentence"><p class="sentence__p">$19</p></div>
-                <div class="day_price"><p class="day_price__p">Monthly Payment</p></div>
-                <div class="orange__line2"><p class="orange__line2__p">Our most popular</p></div>
-                <div class="other_block"><p class="other_block__p">5 gb of space</p></div>
-                <div class="other_block"><p class="other_block__p">50 gb of bandwidth</p></div>
-                <div class="other_block"><p class="other_block__p">12 websites</p></div>
-                <div class="other_block"><p class="other_block__p">Advanced Customization</p></div>
-                <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>
-                <div class="other_block"><p class="other_block__p">Email support</p></div>
-            </div>
-            <div class="pricing__table">
-                <div class="description"><p class="description_p">Enterprise</p></div>
-                <div class="sentence"><p class="sentence__p">$70</p></div>
-                <div class="day_price"><p class="day_price__p">Monthly Payment</p></div>
-                <div class="orange__line13"></div>
-                <div class="other_block"><p class="other_block__p">Unlimited space</p></div>
-                <div class="other_block"><p class="other_block__p">Unlimited bandwidth</p></div>
-                <div class="other_block"><p class="other_block__p">100 websites</p></div>
-                <div class="other_block"><p class="other_block__p">Advanced Customization</p></div>
-                <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>
-                <div class="other_block"><p class="other_block__p">24/7 customer support</p></div>
-            </div>
-        </div>
-    </div>
+<!--<div class="pricing_back">-->
+<!--    <div class="pricing container">-->
+<!--        <h2>PRICING OPTIONS</h2>-->
+<!--        <p class="benefit__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+<!--        <div class="pricing_row">-->
+<!--            <div class="pricing__table">-->
+<!--                <div class="description"><p class="description_p">Basic</p></div>-->
+<!--                <div class="sentence"><p class="sentence__p">$0</p></div>-->
+<!--                <div class="day_price"><p class="day_price__p">Free for Life</p></div>-->
+<!--                <div class="orange__line13"></div>-->
+<!--                <div class="other_block"><p class="other_block__p">1 gb of space</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">10 gb of bandwidth</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">13 websites</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Basic Customization</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Email support</p></div>-->
+<!--            </div>-->
+<!--            <div class="pricing__table">-->
+<!--                <div class="description"><p class="description_p">Professional</p></div>-->
+<!--                <div class="sentence"><p class="sentence__p">$19</p></div>-->
+<!--                <div class="day_price"><p class="day_price__p">Monthly Payment</p></div>-->
+<!--                <div class="orange__line2"><p class="orange__line2__p">Our most popular</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">5 gb of space</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">50 gb of bandwidth</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">12 websites</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Advanced Customization</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Email support</p></div>-->
+<!--            </div>-->
+<!--            <div class="pricing__table">-->
+<!--                <div class="description"><p class="description_p">Enterprise</p></div>-->
+<!--                <div class="sentence"><p class="sentence__p">$70</p></div>-->
+<!--                <div class="day_price"><p class="day_price__p">Monthly Payment</p></div>-->
+<!--                <div class="orange__line13"></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Unlimited space</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Unlimited bandwidth</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">100 websites</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Advanced Customization</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">Wordpress integration</p></div>-->
+<!--                <div class="other_block"><p class="other_block__p">24/7 customer support</p></div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-</div>
-<!-- ------------------------------- block download---------------------------------------------->
-<div class="download">
-    <div class="download__image">
-        <div class="download__color">
-            <div class="download__text">
-                <h2 class="__white">Stylish axure design</h2>
-                <p class="download__p1">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
-                <div class="download__wrap1">
-                    <div class="download__wrap2">
-                        <p class="download__p2">Download</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
+<!--</div>-->
+<div class="download _text-center">
+    <div class="download_bg container">
+        <h2 class="__white">Stylish axure design</h2>
+        <p class="_light">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+        <button class="button _outline">Download</button>
     </div>
 </div>
 <!--   ------------------------------forms---------------------------------------------- -->
-<div class="contact container">
-    <h2>Contact us</h2>
-    <p class="benefit__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <div class="row_contact">
-    <div class="form_direction1">
-    <form action="#" >
-    <input type="text" class="name_form" placeholder="Name">
-    </form>
-        <form action="#">
-            <input type="email" class="name_form" placeholder="Email">
-        </form>
-        <form action="#">
-            <input type="text" class="name_form" placeholder="Subject">
+<div class="contact ">
+    <div class="container _text-center">
+        <h2>Contact us</h2>
+        <p class="_indent">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <form>
+            <div class="row contact__row">
+            <div class="cell contact__cell">
+                <input  class="contact__field" type="text" placeholder="Name" name="Name">
+                <input  class="contact__field" type="email" placeholder="Email" name="email">
+                <input class="contact__field" type="text" placeholder="Subject" name="Subjec">
+            </div>
+            <div class="cell contact__cell">
+                <textarea class="contact__field" name="message" rows="7" placeholder="Massage"></textarea>
+            </div>
+            </div>
+                <button class="button ">Send Message</button>
         </form>
     </div>
-    <div class="form_direction2">
-        <form action="#">
-            <textarea name="text" id="" cols="30" rows="10" placeholder="Message" >
 
-            </textarea>
-        </form>
-    </div>
 </div>
+<div class="footer _text-center">
+    <div class="container ">
+        <svg class="footer_icon icon ">
+            <use href="#facebook"></use>
+        </svg>
+        <svg class="footer_icon icon ">
+            <use href="#twitter"></use>
+        </svg>
+        <svg class="footer_icon icon ">
+            <use href="#google"></use>
+        </svg>
+        <svg class="footer_icon icon ">
+            <use href="#pinterest"></use>
+        </svg>
+        <svg class="footer_icon icon ">
+            <use href="#instagram"></use>
+        </svg>
+        <svg class="footer_icon icon ">
+            <use href="#stumbleupon"></use>
+        </svg>
+        <svg class="footer_icon icon ">
+            <use href="#rss"></use>
+        </svg>
+        <p class="footer_p">© 2015 Axure Themes</p>
+    </div>
+
 </div>
 <!--   ------------------------------block links---------------------------------------------- -->
-<div class="links">
-    <div class="links__image container">
-        <i class="fab fa-facebook-f"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-google-plus-g"></i>
-        <i class="fab fa-pinterest"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-stumbleupon"></i>
-        <i class="fas fa-rss"></i>
-    </div>
-    <p class="links__p">© 2015 Axure Themes</p>
-</div>
+<!--<div class="links">-->
+<!--    <div class="links__image container">-->
+<!--        <i class="fab fa-facebook-f"></i>-->
+<!--        <i class="fab fa-twitter"></i>-->
+<!--        <i class="fab fa-google-plus-g"></i>-->
+<!--        <i class="fab fa-pinterest"></i>-->
+<!--        <i class="fab fa-instagram"></i>-->
+<!--        <i class="fab fa-stumbleupon"></i>-->
+<!--        <i class="fas fa-rss"></i>-->
+<!--    </div>-->
+<!--    <p class="links__p">© 2015 Axure Themes</p>-->
+<!--</div>-->
 </body>
 </html>
