--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <p>Aenean euismod bibendum laoreet</p>
         </div>
-        <svg  class="icon facebook social_media_icon">
+        <svg  class="icon facebook social_media__icon">
             <use href="#facebook"></use>
         </svg>
         <svg  class="icon social_media__icon">
@@ -141,6 +141,33 @@
 <section class="reviews container _text-center">
     <h2>What our customers are saying</h2>
     <p class="_indent">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="row">
+        <div class="cell">
+            <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
+                <div class="triangle_down"></div>
+                <p class="reviews__border__p">Jeremy H.</p>
+                <div class="reviews__img"></div>
+            </div>
+
+
+
+        </div>
+        <div class="cell">
+            <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
+                <div class="triangle_down"></div>
+                <p class="reviews__border__p">John S.</p>
+                <div class="reviews__img"></div>
+            </div>
+        </div>
+        <div class="cell">
+            <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
+                <div class="triangle_down"></div>
+                <p class="reviews__border__p">Susan W.</p>
+                <p></p>
+                <div class="reviews__img"></div>
+            </div>
+        </div>
+    </div>
 
 </section>
 <section class="download _text-center">
