--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
     <symbol id="rss" viewBox="0 0 448 512"><path fill="currentColor" d="M128.081 415.959c0 35.369-28.672 64.041-64.041 64.041S0 451.328 0 415.959s28.672-64.041 64.041-64.041 64.04 28.673 64.04 64.041zm175.66 47.25c-8.354-154.6-132.185-278.587-286.95-286.95C7.656 175.765 0 183.105 0 192.253v48.069c0 8.415 6.49 15.472 14.887 16.018 111.832 7.284 201.473 96.702 208.772 208.772.547 8.397 7.604 14.887 16.018 14.887h48.069c9.149.001 16.489-7.655 15.995-16.79zm144.249.288C439.596 229.677 251.465 40.445 16.503 32.01 7.473 31.686 0 38.981 0 48.016v48.068c0 8.625 6.835 15.645 15.453 15.999 191.179 7.839 344.627 161.316 352.465 352.465.353 8.618 7.373 15.453 15.999 15.453h48.068c9.034-.001 16.329-7.474 16.005-16.504z"></path></symbol>
 </svg>
 <header class="header">
-    <div class="container">
-
+    <div class="container row">
+        <div class="header__logo"></div>
+        <div class="header__content">
+            <p class="header__p header__indent">Features</p>
+            <p class="header__p header__indent">About</p>
+            <p class="header__p header__indent">Pricing</p>
+            <p class="header__p header__indent">Reviews</p>
+            <p class="header__p header__indent">Contact</p>
+        </div>
     </div>
 
 </header>
@@ -62,10 +69,24 @@
     </div>
 </section>
 <section class="tabs base_bg">
-    <div class="container">
-
+    <div class="container _text-center">
+        <div class="row">
+            <div class="cell">
+                <div class="tabs__block1 orange_bg"><p class="tabs__p">Tab 1</p></div>
+                <div class="grey_bg tabs__block2"><p class="tabs__p">Tab 2</p></div>
+                <div class="grey_bg tabs__block3"><p class="tabs__p">Tab 3</p></div>
+            </div>
+            <div class="cell tabs__left">
+                <h3>Tabs with soft transitioning effect.</h3>
+                <p class="tabs__indent1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod <br>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra<br> justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque<br> penatibus et magnis dis parturient montes.</p>
+                <p class="tabs__indent2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod <br>bibendum laoreet.</p>
+               <button class="button">Download</button>
+            </div>
+            <div class="cell">
+                <div class="tabs__img"></div>
+            </div>
+        </div>
     </div>
-
 </section>
 <section class="benefit container _text-center">
     <h2>Why this is awesome</h2>
@@ -147,23 +168,22 @@
                 <div class="triangle_down"></div>
                 <p class="reviews__border__p">Jeremy H.</p>
                 <div class="reviews__img"></div>
+                <p class="reviews__position">Manager</p>
             </div>
-
-
-
         </div>
         <div class="cell">
             <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
                 <div class="triangle_down"></div>
                 <p class="reviews__border__p">John S.</p>
                 <div class="reviews__img"></div>
+                <p class="reviews__position">Freelancer</p>
             </div>
         </div>
         <div class="cell">
             <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
                 <div class="triangle_down"></div>
                 <p class="reviews__border__p">Susan W.</p>
-                <p></p>
+                <p class="reviews__position">Photographer</p>
                 <div class="reviews__img"></div>
             </div>
         </div>
