--- a/index.html
+++ b/index.html
@@ -18,25 +18,48 @@
 <header class="header">
     <div class="container row">
         <div class="header__logo"></div>
-        <div class="header__content">
-            <p class="header__p header__indent">Features</p>
-            <p class="header__p header__indent">About</p>
-            <p class="header__p header__indent">Pricing</p>
-            <p class="header__p header__indent">Reviews</p>
-            <p class="header__p header__indent">Contact</p>
-        </div>
+        <nav class="header__content">
+            <p class="header__indent"><a href="#">Features</a></p>
+            <p class="header__indent"><a href="#">About</a></p>
+            <p class="header__indent"><a href="#">Pricing</a></p>
+            <p class="header__indent"><a href="#">Reviews</a></p>
+            <p class="header__indent"><a href="#">Contact</a></p>
+        </nav>
     </div>
 
 </header>
-<nav class="nav">
-    <div class="nav__bg">
+<section class="main">
+    <div class="main__bg">
         <div class="container">
+            <div class="row">
+            <div class="cell">
+                <img src="./assets/image/logo-1.png" alt="logo">
+            <h2 class="_left_white">MODERN AXURE TEMPLATE<br>FOR BEAUTIFUL PROTOTYPES</h2>
+            <p class="_light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean<br>euismod bibendum laoreet. Proin gravida dolor sit amet lacus<br>accumsan et viverra justo commodo.</p>
+            <button class="button _outline">Download</button>
+            </div>
+            <div class="cell main__width _text-center">
+                <div class="main__border_try">
+                    <h3>Try your <span class="free">free</span> trial today</h3>
+                </div>
+                <form>
+                    <div class="main__border_form">
+                        <input  class="contact__field" type="text" placeholder="Name" name="Name">
+                        <input  class="contact__field" type="email" placeholder="Email" name="email">
+                        <input class="contact__field" type="password" placeholder="Password" name="password">
+                    </div>
+                    <div>
+                    <button class="button main__button_get">Get Started</button>
+                    </div>
+                </form>
+            </div>
 
+            </div>
         </div>
 
     </div>
 
-</nav>
+</section>
 <section class="social_media">
     <div class="container social_media__flex">
         <div>
@@ -165,26 +188,24 @@
     <div class="row">
         <div class="cell">
             <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
-                <div class="triangle_down"></div>
-                <p class="reviews__border__p">Jeremy H.</p>
-                <div class="reviews__img"></div>
-                <p class="reviews__position">Manager</p>
+            </div>
+            <div class="reviews__position">
+                <img src="./assets/image/face.jpg" alt="face">
+                <p></p>
             </div>
         </div>
         <div class="cell">
             <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
-                <div class="triangle_down"></div>
-                <p class="reviews__border__p">John S.</p>
-                <div class="reviews__img"></div>
-                <p class="reviews__position">Freelancer</p>
+            </div>
+            <div class="reviews__position">
+                <img src="./assets/image/face.jpg" alt="face">
             </div>
         </div>
         <div class="cell">
             <div class="reviews__border"><p class="reviews__border__text">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque<br> quo suscipit.</p>
-                <div class="triangle_down"></div>
-                <p class="reviews__border__p">Susan W.</p>
-                <p class="reviews__position">Photographer</p>
-                <div class="reviews__img"></div>
+            </div>
+            <div class="reviews__position">
+                <img src="./assets/image/face.jpg" alt="face">
             </div>
         </div>
     </div>
